--- a/okreplay-sample/build.gradle
+++ b/okreplay-sample/build.gradle
@@ -27,6 +27,15 @@ android {
     disable 'InvalidPackage'
   }
 
+  compileOptions {
+    sourceCompatibility 1.8
+    targetCompatibility 1.8
+  }
+
+  kotlinOptions {
+    jvmTarget = '1.8'
+  }
+
   useLibrary 'android.test.runner'
   useLibrary 'android.test.base'
   useLibrary 'android.test.mock'
