--- a/okreplay-core/build.gradle
+++ b/okreplay-core/build.gradle
@@ -14,3 +14,21 @@ dependencies {
   implementation dep.okhttp
   implementation dep.jsr305
 }
+
+publishing {
+  repositories {
+    maven {
+      name = "GitHubPackages"
+      url = uri("https://maven.pkg.github.com/Leafly-com/okreplay")
+      credentials {
+        username = project.findProperty("gpr.user") ?: System.getenv("GPR_USER")
+        password = project.findProperty("gpr.key") ?: System.getenv("GPR_API_KEY")
+      }
+    }
+  }
+  publications {
+    gpr(MavenPublication) {
+      from components.java
+    }
+  }
+}
