--- a/okreplay-gradle-plugin/build.gradle
+++ b/okreplay-gradle-plugin/build.gradle
@@ -26,3 +26,21 @@ test {
 validateTaskProperties {
   failOnWarning = true
 }
+
+publishing {
+  repositories {
+    maven {
+      name = "GitHubPackages"
+      url = uri("https://maven.pkg.github.com/Leafly-com/okreplay")
+      credentials {
+        username = project.findProperty("gpr.user") ?: System.getenv("GPR_USER")
+        password = project.findProperty("gpr.key") ?: System.getenv("GPR_API_KEY")
+      }
+    }
+  }
+  publications {
+    gpr(MavenPublication) {
+      from components.java
+    }
+  }
+}
