--- a/okreplay-noop/build.gradle
+++ b/okreplay-noop/build.gradle
@@ -10,3 +10,21 @@ targetCompatibility = "1.7"
 dependencies {
   implementation dep.okhttp
 }
+
+publishing {
+  repositories {
+    maven {
+      name = "GitHubPackages"
+      url = uri("https://maven.pkg.github.com/Leafly-com/okreplay")
+      credentials {
+        username = project.findProperty("gpr.user") ?: System.getenv("GPR_USER")
+        password = project.findProperty("gpr.key") ?: System.getenv("GPR_API_KEY")
+      }
+    }
+  }
+  publications {
+    gpr(MavenPublication) {
+      from components.java
+    }
+  }
+}
